# foxglove

./: Cargo.toml  README.md  fibonacci.fox
examples/: benchmark.fox  cranelift_test.fox  factorial.fox  fibonacci.fox  hello.fox  puts_test.fox  sort.fox  test.fox
src/: ast.rs  build_cranelift.rs  cfg.rs  create_cfg.rs  error.rs  hir.rs  interpreter.rs  lexer.rs  lib.rs  lower.rs  main.rs  parser.rs  token.rs  typecheck.rs  typed_ast.rs  typed_hir.rs
src/codegen/: cranelift.rs  mod.rs
src/error/: mod.rs
src/lexer/: mod.rs  token.rs
src/parser/: ast.rs  ast_printer.rs  mod.rs
src/snapshots/: foxglove__lexer__test__lex_dot_dot-2.snap  foxglove__lexer__test__lex_dot_dot.snap  foxglove__lexer__test__lex_operators.snap
src/typechecker/: engine.rs  mod.rs  typed_ast.rs
