[package]
name = "foxglove"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.3.0"
chumsky = "1.0.0-alpha.4"
clap = { version = "4.4.2", features = ["derive"] }
cranelift = "0.99.1"
cranelift-jit = "0.99.1"
cranelift-module = "0.99.1"
cranelift-native = "0.99.1"
petgraph = "0.6.4"
rustc-hash = "1.1.0"
