[package]
name = "foxglove"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.3.0"
chumsky = "1.0.0-alpha.4"
clap = { version = "4.4.3", features = ["derive"] }
cranelift = "0.99.2"
cranelift-jit = "0.99.2"
cranelift-module = "0.99.2"
cranelift-native = "0.99.2"
cranelift-object = "0.99.2"
log = "0.4.20"
simple_logger = { version = "4.2.0", default-features = false, features = ["colors", "stderr"] }
