[package]
name = "foxglove"
version = "0.1.0"
edition = "2021"

[dependencies]
chumsky = { version = "1.0.0-alpha.6", features = ["label"] }
ariadne = "0.3.0"
clap = { version = "4.4.3", features = ["derive"] }
cranelift = "0.101.0"
cranelift-jit = "0.101.0"
cranelift-module = "0.101.0"
cranelift-native = "0.101.0"
cranelift-object = "0.101.0"
log = "0.4.20"
ptree = "0.4.0"
simple_logger = { version = "4.2.0", default-features = false, features = [
    "colors",
    "stderr",
] }
